// Vitest Snapshot v1

exports[`default environment argument parameter name prefix > when both argument CLI_PARAM and CLI_PARAMETER are passed then an error is thrown 1`] = `
[
  [
    "Cannot run command, you made some mistakes:

Duplicate input for parameter foo

Here are the docs for this command:

",
  ],
  [
    "
PARAMETERS

  [4m[90mName[39m[24m   [4m[90mType[39m[24m         [4m[90mDefault[39m[24m      [4m[90mEnvironment (1)[39m[24m                         
  
  [1m[32mfoo[39m[22m    [32mstring[39m       [1m[30m[101m REQUIRED [49m[39m[22m   [34m✓[39m          
  
[2m[90m  NOTES[39m[22m
[2m[90m  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━[39m[22m
[2m[90m  (1) Parameters can be passed arguments via environment variables. Command line                     [39m[22m
[2m[90m      arguments take precedence. Environment variable names are snake cased                          [39m[22m
[2m[90m      versions of the parameter name (or its aliases), case insensitive. They must                   [39m[22m
[2m[90m      be prefixed with [34mCLI_PARAMETER_[39m[90m or [34mCLI_PARAM_[39m[90m (case insensitive). Examples:                    [39m[22m
[2m[90m        → [34mCLI_PARAMETER_[39m[90m[32mFOO[39m[90m=\\"...\\".                                                                   [39m[22m
",
  ],
]
`;

exports[`error > when using multiple prefixes and args passed for all param variations 1`] = `
[
  [
    "Cannot run command, you made some mistakes:

Duplicate input for parameter foo
X Duplicate input for parameter bar

Here are the docs for this command:

",
  ],
  [
    "
PARAMETERS

  [4m[90mName[39m[24m   [4m[90mType[39m[24m         [4m[90mDefault[39m[24m      [4m[90mEnvironment (1)[39m[24m                         
  
  [1m[32mbar[39m[22m    [32mstring[39m       [1m[30m[101m REQUIRED [49m[39m[22m   [34m✓[39m          
  
  [1m[32mfoo[39m[22m    [32mstring[39m       [1m[30m[101m REQUIRED [49m[39m[22m   [34m✓[39m          
  
[2m[90m  NOTES[39m[22m
[2m[90m  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━[39m[22m
[2m[90m  (1) Parameters can be passed arguments via environment variables. Command line                     [39m[22m
[2m[90m      arguments take precedence. Environment variable names are snake cased                          [39m[22m
[2m[90m      versions of the parameter name (or its aliases), case insensitive. They must                   [39m[22m
[2m[90m      be prefixed with [34mCLI_PARAMETER_[39m[90m or [34mCLI_PARAM_[39m[90m (case insensitive). Examples:                    [39m[22m
[2m[90m        → [34mCLI_PARAMETER_[39m[90m[32mBAR[39m[90m=\\"...\\"                                                                    [39m[22m
[2m[90m        → [34mCLI_PARAMETER_[39m[90m[32mFOO[39m[90m=\\"...\\".                                                                   [39m[22m
",
  ],
]
`;

exports[`error > when using prefix and there is a typo 1`] = `
[
  [
    "Cannot run command, you made some mistakes:

Missing argument for flag \\"foo\\".

Here are the docs for this command:

",
  ],
  [
    "
PARAMETERS

  [4m[90mName[39m[24m   [4m[90mType[39m[24m         [4m[90mDefault[39m[24m      [4m[90mEnvironment (1)[39m[24m                         
  
  [1m[32mfoo[39m[22m    [32mstring[39m       [1m[30m[101m REQUIRED [49m[39m[22m   [34m✓[39m          
  
[2m[90m  NOTES[39m[22m
[2m[90m  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━[39m[22m
[2m[90m  (1) Parameters can be passed arguments via environment variables. Command line                     [39m[22m
[2m[90m      arguments take precedence. Environment variable names are snake cased                          [39m[22m
[2m[90m      versions of the parameter name (or its aliases), case insensitive. They must                   [39m[22m
[2m[90m      be prefixed with [34mCLI_PARAMETER_[39m[90m or [34mCLI_PARAM_[39m[90m (case insensitive). Examples:                    [39m[22m
[2m[90m        → [34mCLI_PARAMETER_[39m[90m[32mFOO[39m[90m=\\"...\\".                                                                   [39m[22m
",
  ],
]
`;
